base/frontend/pc-vsvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: proclone
spec:
    hosts:
        - "*"
    gateways:
        - pc-gateway
    http:
        - match:
            - uri:
                prefix: "/api/"
          route:
            - destination:
                host: proclone-backend
                port:
                    number: 80
        - match:
            - uri:
                prefix: "/"
          route:
            - destination:
                host: pc-front
                port:
                    number: 80
    tcp:
        - match:
            - destinationSubnets:
                - [192.168.1.0/24] #REPLACE (subnet containing proxmox nodes)
              gateways:
                - mesh
              port: 8006
          route:
            - destination:
                host: istio-egressgateway.istio-system.svc.cluster.local
                port:
                    number: 15443
        - match:
            - gateways:
                - istio-egressgateway
              port: 15443
          route:
            - destination:
                host: [proxmox.server.address] #REPLACE
                port:
                    number: 8006
